# hub

./: .env.example  .gitignore  .golangci.yml  AGENTS.md  Dockerfile  Makefile  README.md  Untitled-1.md  agents.md  compose.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  openapi.yaml  package.json  plan.md  pnpm-lock.yaml  schemathesis.toml
.githooks/: README.md  pre-commit
.github/: CONTRIBUTING.md  MAINTAINER_GUIDE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  pull_request_template.md
docs/: .gitignore  README.md  docs.go  docs.json  docusaurus.config.ts  embedding-classification.md  enrichment.md  eslint.config.mjs  home.mdx  hub-powerbi.mdx  hub-refactoring-analysis.md  hub-superset.mdx  package.json  pnpm-lock.yaml  quickstart.mdx  swagger.json  swagger.yaml  tsconfig.json  webhooks-implementation-review.md
migrations/: 001_initial_schema.sql  002_webhooks.sql  003_add_feedback_records_embedding.sql  003_add_feedback_records_submission_id.sql  006_list_keyset_indexes.sql  (+19 more)
services/taxonomy-generator/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
services/taxonomy-generator/src/: __init__.py  config.py  main.py  service.py
services/taxonomy-generator/src/clustering/: __init__.py  hdbscan_clusterer.py  umap_reducer.py
services/taxonomy-generator/src/db/: __init__.py  postgres.py
services/taxonomy-generator/src/labeling/: __init__.py  openai_labeler.py
services/taxonomy-generator/src/models/: __init__.py  schemas.py
services/taxonomy-generator/tests/: __init__.py  test_clustering.py
(+463 files in other folders)
