[tool.poetry]
name = "taxonomy-generator"
version = "0.1.0"
description = "Taxonomy generation microservice using UMAP, HDBSCAN, and GPT-4o"
authors = ["Formbricks <dev@formbricks.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
pgvector = "^0.3.6"
numpy = "^2.2.0"
umap-learn = "^0.5.7"
hdbscan = "^0.8.40"
openai = "^1.59.0"
httpx = "^0.28.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
